# rusty-imap-mcp

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  sonar-project.properties  typos.toml
crates/rimap-audit/: Cargo.toml
crates/rimap-audit/src/: backup_exclude.rs  cancellation.rs  error.rs  fs.rs  fs_ext.rs  ids.rs  lib.rs  provenance.rs  reader.rs  record.rs  redact.rs  rotation.rs  self_check.rs  writer.rs
crates/rimap-audit/src/reader/: backup_exclude.rs  mod.rs
crates/rimap-audit/src/record/: error.rs  ids.rs  mod.rs  peer_identity.rs
crates/rimap-audit/src/redact/: mod.rs
crates/rimap-audit/src/writer/: emit.rs  log.rs  mod.rs  provenance.rs  rotation.rs  self_check.rs
crates/rimap-audit/tests/: concurrent_lock.rs  docs_anchor.rs  fail_open.rs  inode_change.rs  partial_line.rs  redact_properties.rs  rotation.rs
crates/rimap-authz/: Cargo.toml
crates/rimap-authz/proptest-regressions/: rate_limit.txt
crates/rimap-authz/src/: breaker.rs  error.rs  folder_guard.rs  folder_name.rs  guard.rs  lib.rs  matrix.rs  rate_limit.rs
crates/rimap-config/: Cargo.toml
crates/rimap-config/src/: credential.rs  error.rs  lib.rs  loader.rs  login.rs  model.rs  test_support.rs  validate.rs
crates/rimap-config/src/validate/: identity.rs  limits.rs  mod.rs  paths.rs  rules.rs
crates/rimap-content/: Cargo.toml  build.rs
crates/rimap-content/data/: NOTICE
crates/rimap-content/src/: error.rs  html.rs  lib.rs  lookalike.rs  output.rs  parse.rs  raw_parts.rs  testutil.rs  threading.rs  unicode.rs
crates/rimap-content/src/html/: extract.rs  hidden.rs  mismatch.rs  mod.rs  sanitize.rs  style_parse.rs
crates/rimap-content/src/parse/: attachments.rs  bodies.rs  filename.rs  headers.rs  meta.rs  mime_scrub.rs  mod.rs  safe_parser.rs  sniff.rs
crates/rimap-content/tests/: epvme_integration.rs  injection_corpus.rs  parser_panic_safety.rs  properties.rs  proptest_charset.rs  proptest_html_lookalike.rs  snapshots.rs  upstream_201_direct.rs
crates/rimap-content/tests/data/: mail_parser_panic_201.eml
crates/rimap-core/: Cargo.toml  build.rs
crates/rimap-core/src/: account.rs  audit.rs  auth_event.rs  auth_sink.rs  credential.rs  error.rs  folder_name.rs  fs.rs  lib.rs  posture.rs  posture_matrix.rs  session.rs  tls.rs  tool.rs  uid_selector.rs  ulid_newtype.rs  version.rs  warning.rs
crates/rimap-core/tests/: version.rs
crates/rimap-imap/: Cargo.toml
crates/rimap-imap/src/: auth.rs  connection.rs  error.rs  lib.rs  preflight.rs  special_use.rs  test_support.rs  time.rs  tls.rs  types.rs
crates/rimap-imap/src/ops/: append.rs  delete.rs  expunge.rs  fetch.rs  mod.rs  (+7 more)
crates/rimap-imap/tests/: error_mapping.rs  tls_pinning.rs
crates/rimap-server/: Cargo.toml
crates/rimap-server/src/: audit_cmd.rs  audit_init.rs  cli.rs  content.rs  dispatch.rs  download.rs  dry_run.rs  e2e_test.rs  lib.rs  logging.rs  main.rs  mcp_error.rs  registry.rs  response.rs  server.rs
crates/rimap-server/tests/: audit_fail_open.rs  audit_merge.rs  cli_smoke.rs  daemon_dovecot_audit.rs  daemon_dovecot_graceful.rs  daemon_dovecot_max_sessions.rs  daemon_dovecot_peer_identity.rs  daemon_dovecot_shim_reconnect.rs  daemon_graceful_shutdown.rs  daemon_happy_path.rs  daemon_hardening.rs  daemon_max_sessions.rs  dispatch_ticket.rs  dry_run_cli.rs  dump_tool_catalog.rs  e2e.rs  e2e_wire.rs  e2e_wire_cancellation.rs  mcp_audit_failure.rs  mcp_wire_conformance.rs  mcp_wire_negative.rs  mcp_wire_proptest.proptest-regressions  mcp_wire_proptest.rs  server_capabilities.rs  service_install_uninstall.rs  shim_error_no_daemon.rs  shim_happy_path.rs  shim_pump_shutdown.rs  shim_socket_verify.rs
crates/rimap-smtp/: Cargo.toml
crates/rimap-smtp/src/: client.rs  error.rs  lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/audit_jsonl/: auth_ok.jsonl  config.jsonl  embedded_lf.jsonl  leading_bom.jsonl  missing_fields.jsonl  oversized_string.jsonl  process_end.jsonl  process_start.jsonl  tool_end_ok.jsonl  tool_start_leak_probe.jsonl  tool_start_search.jsonl  unknown_kind.jsonl
fuzz/corpus/content_charset/: ascii  big5  empty-body  euc-jp  euc-kr  garbage-1  garbage-2  garbage-3  garbage-4  garbage-5  gb18030  gbk  iso-2022-jp  iso8859-1  iso8859-15  iso8859-2  koi8-r  koi8-u  macintosh  mismatch-1  mismatch-2  shift-jis  utf8-ascii  utf8-bom  utf8-emoji  utf8-empty  utf8-invalid  utf8-overlong  utf8-truncated  windows-1250  windows-1251  windows-1252  windows-1255
fuzz/corpus/content_html/: anchor.html  empty-doc.html  hidden.html  html-anchor-unparsable-href-0.html  html-display-none-0.html  html-offscreen-evasion-0.html  html-only-hidden-instructions-0.html  html-remote-image-tracker-0.html  html-script-payload-0.html  html-text-href-mismatch-0.html  html-tokenizer-divergence-0.html  html-white-on-white-0.html  js-href.html  long-text.html  lookalike-homograph-paypal-0.html  remote-img.html  script-only.html  style-only.html  white-on-white.html
fuzz/corpus/content_mime/: attachment-path-traversal.eml  dovecot-plain.eml  html-anchor-unparsable-href.eml  html-display-none.eml  html-offscreen-evasion.eml  html-only-hidden-instructions.eml  html-remote-image-tracker.eml  html-script-payload.eml  html-text-href-mismatch.eml  html-tokenizer-divergence.eml  html-white-on-white.eml  lookalike-filename-rlo-bidi.eml  lookalike-homograph-paypal.eml  lookalike-idn-positive.eml  lookalike-idn-punycode.eml  lookalike-reply-to-mismatch.eml  mailing-list.eml  mime-type-spoofing.eml  multilingual-negative.eml  multipart-bomb.eml  nested-rfc822.eml  prompt-injection-plaintext.eml  rfc2047-crlf-smuggling.eml  trojan-source-bidi.eml  zero-width-poisoning.eml
fuzz/corpus/content_rfc2047/: clean-b64.eml  clean-q.eml  dangling-close.eml  dangling-open.eml  no-eword.eml  truncated.eml
fuzz/fuzz_targets/: audit_jsonl.rs  content_charset.rs  content_html.rs  content_mime.rs  content_rfc2047.rs
fuzz/src/: lib.rs
(+366 files in other folders)
