[workspace]
resolver = "2"
members = [
    "crates/rimap-core",
    "crates/rimap-config",
    "crates/rimap-imap",
    "crates/rimap-content",
    "crates/rimap-audit",
    "crates/rimap-authz",
    "crates/rimap-server",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomparity/rusty-imap-mcp"
authors = ["David Christensen"]
readme = "README.md"

# Dependency versions are declared once here and inherited by member crates via
# `foo = { workspace = true }`. No member crate may declare a version directly.
[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serde / config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Paths
directories = "5.0"

# Credentials
keyring = { version = "3.6", features = ["apple-native", "linux-native-sync-persistent"] }
rpassword = "7.3"

# Authorization primitives
governor = "0.7"
nonzero_ext = "0.3"
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }

# IMAP / TLS (Sprint 3)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-channel = "2"
futures-util = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Audit log
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
libc = "0.2"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }
# ulid pinned to =1.1.4: later versions bump to rand 0.9, which conflicts
# with governor's rand 0.8 transitively and trips cargo-deny's duplicate
# version ban. Revisit once governor 0.8+ (with rand 0.9) stabilizes.
ulid = { version = "=1.1.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
subtle = "2"
# strum 0.26 pulls strum_macros (a proc-macro executing at build time).
# Reviewed v0.26.4 during the #43 backlog review: maintained by Peter
# Glotfelty / Michael Bryan, top-100 download count, no RUSTSEC advisories,
# no build.rs, standard proc-macro2/quote/syn/heck stack, no network or
# suspicious env access. Re-audit on any version bump. (SC-PROC-01)
strum = { version = "0.26", features = ["derive"] }
rand = "0.8"

# Content pipeline (Sprint 4a)
mail-parser = "0.11"
encoding_rs = "0.8"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
unicode-properties = "0.1"

# Dev dependencies shared across crates
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.6"
temp-env = "0.3"
insta = { version = "1.47", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy in practice)
module_name_repetitions = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
