[workspace]
resolver = "2"
members = [
    "crates/rimap-core",
    "crates/rimap-config",
    "crates/rimap-imap",
    "crates/rimap-content",
    "crates/rimap-audit",
    "crates/rimap-authz",
    "crates/rimap-server",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomparity/rusty-imap-mcp"
authors = ["David Christensen"]
readme = "README.md"

# Dependency versions are declared once here and inherited by member crates via
# `foo = { workspace = true }`. No member crate may declare a version directly.
[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serde / config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Paths
directories = "5.0"

# Credentials
keyring = { version = "3.6", features = ["apple-native", "linux-native-sync-persistent"] }
rpassword = "7.3"

# Authorization primitives
governor = "0.7"
nonzero_ext = "0.3"
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }

# IMAP / TLS (Sprint 3)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-channel = "2"
futures-util = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Audit log
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
libc = "0.2"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }
# ulid pinned to =1.1.4: later versions bump to rand 0.9, which conflicts
# with governor's rand 0.8 transitively and trips cargo-deny's duplicate
# version ban. Revisit once governor 0.8+ (with rand 0.9) stabilizes.
ulid = { version = "=1.1.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
subtle = "2"
# strum 0.26 pulls strum_macros (a proc-macro executing at build time).
# Reviewed v0.26.4 during the #43 backlog review: maintained by Peter
# Glotfelty / Michael Bryan, top-100 download count, no RUSTSEC advisories,
# no build.rs, standard proc-macro2/quote/syn/heck stack, no network or
# suspicious env access. Re-audit on any version bump. (SC-PROC-01)
strum = { version = "0.26", features = ["derive"] }
rand = "0.8"

# Content pipeline (Sprint 4a)
# mail-parser 0.11 transitively pulls hashify (proc-macro), executing
# arbitrary Rust at build time. Reviewed v0.2.9 during Sprint 4a
# supply-chain audit: same publisher as mail-parser (Stalwart Labs),
# Apache-2.0 OR MIT, no build.rs, no std::net/fs/process/env in
# source, sole purpose is compile-time perfect-hash codegen for
# mail-parser's header lookup tables. No RUSTSEC advisories.
# Re-audit on any mail-parser minor bump. (SC-PROC-01)
#
# mail-parser itself is pre-1.0 and parses the most security-critical
# input in the crate graph. On every version bump the reviewer must
# verify: new build.rs? new transitive deps? new feature flags
# enabled? new unsafe? new proc-macros? changes to header parsing or
# MIME walk semantics that would change rimap-content's threat
# model? The Sprint 4a adversarial corpus and insta snapshots are
# the regression-detection mechanism — any snapshot diff on upgrade
# requires a re-audit, not a cargo insta accept. (SC-DEP-09)
mail-parser = "0.11"
encoding_rs = "0.8"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
# unicode-properties provides UAX #44 general-category lookups used by
# rimap-content::lookalike for script/category checks (Sprint 4b).
unicode-properties = "0.1.4"

# Sprint 4b: HTML + lookalike content pipeline
# scraper pulls html5ever + selectors transitively — no direct html5ever dep.
# scraper is ISC-licensed (the only non-MIT/Apache crate in the Sprint 4b delta); ISC is already on deny.toml's allow list.
scraper = { version = "0.26.0", default-features = false }
# ammonia MSRV 1.80, MIT OR Apache-2.0
ammonia = "4.1.2"
linkify = "0.10.0"
# idna 1.x is the current Servo URL-standard IDNA implementation; pulled
# transitively by url crate in other workspace members, pinned here so we
# control the version.
idna = "1.1.0"
# addr 0.15 with default psl feature for registrable-domain extraction.
addr = "0.15.6"
unicode-script = "0.5.8"
# phf gives compile-time perfect-hash maps for the confusables table built
# by rimap-content/build.rs (Sprint 4b Task 2). phf_codegen is a build-time
# dep for that build.rs; declared here for workspace inheritance, the member
# crate lists it under [build-dependencies], not [dependencies].
#
# Direct deps: phf 0.13.1 and phf_codegen 0.13.1. Our phf line sets
# default-features = false, so it does NOT itself enable phf_macros; the
# phf_codegen path runs in build.rs and is reviewed as code we own.
#
# Transitively-introduced proc-macros entering the graph with the Sprint 4b
# dep additions (each executes arbitrary Rust at build time, so SC-PROC-01
# requires per-crate acknowledgement):
#   - phf_macros 0.11.3    (pulled via ammonia → cssparser 0.35 → web_atoms 0.1)
#   - phf_macros 0.13.1    (pulled via scraper → selectors → cssparser 0.36 feature unification)
#   - cssparser-macros 0.6.1
#   - match_token 0.35.0
#   - derive_more-impl 2.1.1
#
# Provenance: all five live under the rust-phf (Steven Fackler / Chris
# Morgan) and servo (Mozilla / rust-lang) ecosystems — the same trust
# anchors already vetted for scraper, ammonia, and cssparser themselves.
# No build.rs tricks, no network/fs/process access in their proc-macro
# sources; their sole purpose is compile-time codegen for perfect-hash
# tables, CSS selector parsing, HTML5 token matching, and derive-macro
# expansion respectively. No RUSTSEC advisories apply to any of these
# versions as of 2026-04-08, and `cargo deny check` passes against the
# full graph (advisories, bans, licenses, sources).
#
# Re-audit trigger: any minor version bump of scraper, ammonia, or the
# phf family. (SC-PROC-01)
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"

# Dev dependencies shared across crates
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.6"
temp-env = "0.3"
insta = { version = "1.47", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy in practice)
module_name_repetitions = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
