[package]
name = "rimap-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Append-only JSONL audit log with exclusive file locking for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
