[package]
name = "rimap-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Append-only JSONL audit log with exclusive file locking for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
fs4 = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
