[package]
name = "rimap-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Append-only JSONL audit log with exclusive file locking for rusty-imap-mcp."

[lints]
workspace = true

[features]
test-injection = []

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
fs4 = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
futures = "0.3"

# ulid is consumed by the rimap_core::ulid_newtype! macro expansion
# (see crates/rimap-core/src/ulid_newtype.rs), invisible to static
# analyzers like cargo-machete.
[package.metadata.cargo-machete]
ignored = ["ulid"]
