[package]
name = "rimap-authz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Posture-based authorization, rate limiting, and circuit breaker for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
