[package]
name = "rimap-authz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Posture-based authorization, rate limiting, and circuit breaker for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
rimap-config = { path = "../rimap-config", version = "1.0.0" }
thiserror = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utf7-imap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "time"] }
