[package]
name = "rimap-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configuration loading, validation, and credential resolution for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
