[package]
name = "rimap-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configuration loading, validation, and credential resolution for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
utf7-imap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
rpassword = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
