[package]
name = "rimap-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# TODO: data/confusables.txt is licensed under Unicode-DFS-2016. If
# this crate is ever published to crates.io, update the license field
# to reflect the vendored data and add "Unicode-DFS-2016" to the
# workspace deny.toml allow list.
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MIME parsing, Unicode-safe sanitization, and look-alike detection for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
mail-parser = { workspace = true }
encoding_rs = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-script = { workspace = true }
scraper = { workspace = true }
ammonia = { workspace = true }
linkify = { workspace = true }
idna = { workspace = true }
addr = { workspace = true }
phf = { workspace = true }

[build-dependencies]
phf_codegen = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
