[package]
name = "rimap-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# TODO: data/confusables.txt is licensed under Unicode-DFS-2016. If
# this crate is ever published to crates.io, update the license field
# to reflect the vendored data and add "Unicode-DFS-2016" to the
# workspace deny.toml allow list.
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MIME parsing, Unicode-safe sanitization, and look-alike detection for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
mail-parser = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
encoding_rs = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-script = { workspace = true }
scraper = { workspace = true }
ammonia = { workspace = true }
linkify = { workspace = true }
idna = { workspace = true }
addr = { workspace = true }
phf = { workspace = true }

[build-dependencies]
phf_codegen = { workspace = true }

[features]
# Test/diagnostic helpers exposed via `rimap_content::testutil`. Enable
# for the epvme_runner binary and when depending on this crate from
# integration tests.
test-util = []

[[bin]]
name = "epvme_runner"
path = "src/bin/epvme_runner.rs"
required-features = ["test-util"]

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies.rimap-content]
path = "."
version = "1.0.0"
features = ["test-util"]

# `phf` is consumed by the `include!`-expanded output of `build.rs`, so
# static analyzers like cargo-machete cannot see the direct usage.
[package.metadata.cargo-machete]
ignored = ["phf"]
