[package]
name = "rimap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared core types for rusty-imap-mcp: Message, Folder, Posture, audit records."

[lints]
workspace = true

[dependencies]
