[package]
name = "rimap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared core types for rusty-imap-mcp: Message, Folder, Posture, audit records."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
