[package]
name = "rimap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared core types for rusty-imap-mcp: Message, Folder, Posture, audit records."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }

[target.'cfg(unix)'.dependencies]
# `std` is required so `rustix::fd::AsFd` resolves to the `std::os::fd` re-export
# rather than the no_std polyfill trait — otherwise `std::os::fd::OwnedFd` does
# not satisfy the `AsFd` bound on `openat` / `fstat` and standalone builds of
# this crate (`cargo check -p rimap-core`) fail. The workspace's `fs4`
# dependency happens to enable it transitively, but isolated checks must not
# rely on that unification.
rustix = { workspace = true, features = ["std"] }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
