[package]
name = "rimap-imap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async IMAP session wrapper with TLS fingerprint pinning for rusty-imap-mcp."

[lints]
workspace = true

[dependencies]
