[package]
name = "rimap-imap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "IMAP session, TLS pinning, and read operations for rusty-imap-mcp"

[lints]
workspace = true

[dependencies]
# Internal — direct path + explicit version to satisfy cargo-deny's wildcard ban.
rimap-core = { path = "../rimap-core", version = "0.0.0" }
rimap-config = { path = "../rimap-config", version = "0.0.0" }
rimap-audit = { path = "../rimap-audit", version = "0.0.0" }

# Async runtime
tokio = { workspace = true }

# IMAP + TLS
async-imap = { workspace = true }
async-channel = { workspace = true }
futures-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date types for SearchQuery
time = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "dovecot"
path = "tests/integration/dovecot.rs"

[[test]]
name = "proton"
path = "tests/integration/proton.rs"
