[package]
name = "rimap-imap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "IMAP session, TLS pinning, and read operations for rusty-imap-mcp"

[features]
default = []
# Exposes test-only constructors (e.g. `PreflightInfo::new`) so cross-crate
# tests in `rimap-server` can synthesize fixtures without going through the
# real probe. Off by default; enabled by `rimap-server`'s dev-deps.
test-support = []

[lints]
workspace = true

[dependencies]
# Internal — direct path + explicit version to satisfy cargo-deny's wildcard ban.
# Transport-only: rimap-imap depends on rimap-core for the AuthEventSink
# and CredentialResolver trait seams; rimap-audit and rimap-config sit
# on the other side of those seams and are wired by rimap-server.
rimap-core = { path = "../rimap-core", version = "1.0.0" }

# Async runtime
tokio = { workspace = true }

# IMAP + TLS
async-imap = { workspace = true }
async-channel = { workspace = true }
futures-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# Credentials (SecretString exposure at call site)
secrecy = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date types for SearchQuery
time = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
# Integration tests build the production wiring (AuditWriter implementing
# AuthEventSink, KeyringCredentialResolver implementing CredentialResolver)
# to drive Connection through a real Dovecot/Proton container.
rimap-audit = { path = "../rimap-audit", version = "1.0.0" }
rimap-config = { path = "../rimap-config", version = "1.0.0" }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "dovecot"
path = "tests/integration/dovecot.rs"

[[test]]
name = "proton"
path = "tests/integration/proton.rs"
